# fitting-a-line

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
data/: README.md  heteroskedastic-1024.csv  heteroskedastic-1024.ecsv  make_data.py
recipes/: least-squares.ipynb
